# api/controllers/bedelos.InboxDetails.js
@@ -1,0 +1,37 @@
+'use strict';
+
+var util = require('util');
+var path = require('path');
+var config = require('config');
+var os = require('os');
+var fs = require('fs');
+var jade = require('jade');
+var nodemailer = require("nodemailer");
+var jsonfile = require('jsonfile');
+var walker = require('walker');
+var _ = require('lodash');
+
+
+function inboxDetails (req, res) {
+    try {
+        var sPath = path.resolve(config.get("bedelos.datapath"));
+        var oTeams = require(sPath + '/Teams.json');
+
+        var oResults = {};
+        var oResult = require(path.resolve(sPath + "/inbox/" + req.swagger.params.gameId.originalValue + ".json"));
+        var html = jade.renderFile("api/views/mail.jade", {
+            pretty: true,
+            teams: oTeams,
+            res: oResult
+        });
+
+        res.status(200).send(html);
+
+    } catch (error) {
+        res.status(500).send("Error: " + error.stack.replace('/\n/g', '<br>'));
+    }
+}
+
+module.exports = {
+    get: inboxDetails
+};
